#10396: Fix z-index problem with feedback confirmation.

--- a/css/feedback.css
+++ b/css/feedback.css
@@ -13,6 +13,9 @@
   padding-bottom: 0;
 } 
 
+#ui-toaster-tr {
+  z-index: 100;
+}
 .ui-toaster .ui-toaster-body div{
   background: white;
 }
